Atualização do projeto

--- a/index.html
+++ b/index.html
@@ -19,45 +19,39 @@
 
   <!-- Tag <body> é o corpo do documento, onde tem as informações que serão mostradas. -->
   <body>
-    <div class="page">
-      <header></header>
-      <main>
-        <div id="hero">
-          <img
-            src="images/img1.jpg"
-            alt="Desenho de uma pessoa vestindo uma camisa amarela em uma sala com Móveis"
-          />
-          <section class="text">
-            <h1>Ambientes <span>únicos</span> para você!</h1>
+    <header>
+      <img
+        src="images/img1.jpg"
+        alt="Desenho de uma pessoa vestindo uma camisa amarela em uma sala com Móveis"
+      />
+    </header>
 
-            <p>
-              Nós criamos ambientes <strong>exclusivos</strong> e
-              <strong>únicos,</strong> com muito bom gosto e profissionalismo,
-              investimos tempo e
-              <strong>dedicação no seu projeto.</strong>
+    <main></main>
 
-              <br />
-            </p>
-            <p>
-              Tenha <span>ambientes limpos</span> e bem decorados, transmitindo
-              <strong>elegância e finesse</strong>
-              para todo aquele que estiver ali.
-            </p>
-          </section>
+    <div id="hero">
+      <h1>Ambientes únicos para você!</h1>
+      <p>
+        Nós criamos ambientes <strong>exclusivos</strong> e
+        <strong>únicos,</strong> com muito bom gosto e profissionalismo,
+        investimos tempo e
+        <span>dedicação no seu projeto.</span>
 
-          <div class="line"></div>
-        </div>
-      </main>
-
-      <footer id="footer">
-        <div>
-          <a target="_blank" href="https://instagram.com/moveisparavoce"
-            >Instagram</a
-          >
-          <a href="mailto:contato@moveisparavoce.com">Fale conosco</a>
-        </div>
-      </footer>
+        <br />
+        <br />
+        Tenha <span>ambientes limpos</span> e bem decorados, transmitindo
+        <strong>elegância e finesse</strong>
+        para todo aquele que estiver ali.
+      </p>
     </div>
+    <div class="line"></div>
+    <footer>
+      <div id="footer">
+        <a target="_blank" href="https://instagram.com/moveisparavoce"
+          >Instagram</a
+        >
+        <a href="mailto:contato@moveisparavoce.com">Fale conosco</a>
+      </div>
+    </footer>
 
     <img
       id="balls"
