Atualização do projeto do desafio

--- a/index.html
+++ b/index.html
@@ -19,31 +19,33 @@
 
   <!-- Tag <body> é o corpo do documento, onde tem as informações que serão mostradas. -->
   <body>
-    <header>
-      <img
-        src="images/img1.jpg"
-        alt="Desenho de uma pessoa vestindo uma camisa amarela em uma sala com Móveis"
-      />
-    </header>
+    <header></header>
 
-    <main></main>
+    <main>
+      <section class="page">
+        <img
+          src="images/img1.jpg"
+          alt="Desenho de uma pessoa vestindo uma camisa amarela em uma sala com Móveis"
+        />
+        <div id="hero">
+          <h1>Ambientes <span>únicos</span> para você!</h1>
+          <p>
+            Nós criamos ambientes <strong>exclusivos</strong> e
+            <strong>únicos,</strong> com muito bom gosto e profissionalismo,
+            investimos tempo e
+            <span>dedicação no seu projeto.</span>
 
-    <div id="hero">
-      <h1>Ambientes únicos para você!</h1>
-      <p>
-        Nós criamos ambientes <strong>exclusivos</strong> e
-        <strong>únicos,</strong> com muito bom gosto e profissionalismo,
-        investimos tempo e
-        <span>dedicação no seu projeto.</span>
-
-        <br />
-        <br />
-        Tenha <span>ambientes limpos</span> e bem decorados, transmitindo
-        <strong>elegância e finesse</strong>
-        para todo aquele que estiver ali.
-      </p>
-    </div>
+            <br />
+            <br />
+            Tenha <span>ambientes limpos</span> e bem decorados, transmitindo
+            <strong>elegância e finesse</strong>
+            para todo aquele que estiver ali.
+          </p>
+        </div>
+      </section>
+    </main>
     <div class="line"></div>
+
     <footer>
       <div id="footer">
         <a target="_blank" href="https://instagram.com/moveisparavoce"
